Add training feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -566,5 +566,42 @@
     <string name="assigned_nurse_prefix">Assigned Nurse:</string>
     <string name="priority_prefix">Priority:</string>
     <string name="task_details_title">Task Details</string>
+
+    <string name="welcome_to_training">Welcome to the Training Module</string>
+    <string name="module_1">Module 1: Basic Caregiving Skills</string>
+    <string name="module_2">Module 2: Advanced Medical Procedures</string>
+    <string name="module_3">Module 3: Emotional Support and Communication</string>
+
+    <string name="module1_description">This foundational module is designed to introduce caregivers to the essential skills required for day-to-day caregiving. It covers the basics of client care, hygiene, nutrition, and safety.</string>
+    <string name="module2_description">This module provides in-depth training on more complex medical procedures that caregivers may need to perform. It includes topics like medication administration, wound care, and monitoring vital signs.</string>
+    <string name="module3_description">This module focuses on the emotional and psychological aspects of caregiving. It teaches caregivers how to provide emotional support to clients, communicate effectively, and manage stress.</string>
+    <!-- String resources for Welcome Onboard and Get Started -->
+    <string name="welcome_onboard">Welcome Onboard</string>
+    <string name="training">Training</string>
+
+    <string name="welcome_message">Welcome to Guardian’s Online Learning Hub!</string>
+    <string name="welcome_description">Here, you can access and complete mandatory e-learning modules, as well as enroll in additional training courses available in the ‘Training Library’.\n\nWhether you’re completing training for the first time, refreshing your knowledge, or exploring further learning opportunities, we hope you enjoy your experience.\n\nUpon successfully completing a course, you will receive your certificate via email.\n\nIf you have any questions, please email us at training@guardian.org.au.\n\nThank you and enjoy your learning journey!</string>
+
+
+    <string name="inspiring_leadership">Inspiring Leadership through Emotional Intelligence</string>
+    <string name="inspiring_leadership_description">This section covers key aspects of emotional intelligence for inspiring leadership.</string>
+    <string name="emotional_intelligence_communication">• Emotional Intelligence and Communication</string>
+    <string name="emotional_intelligence_communication_description">This section covers the role of emotional intelligence in effective communication.</string>
+
+    <string name="medication_administration_title">Introduction to Medication Administration Technique</string>
+    <string name="medication_administration_description">This section covers the basics of administering medication safely and effectively.</string>
+
+    <string name="medication_safety_title">Medication Safety and Special Consideration</string>
+    <string name="medication_safety_description">This section covers safety protocols and special considerations in medication administration.</string>
+
+    <string name="homecare_induction">• Homecare Induction</string>
+    <string name="homecare_induction_description">This section covers essential homecare induction techniques.</string>
+    <string name="infection_control">• Infection Control</string>
+    <string name="infection_control_description">This section covers essential infection control techniques.</string>
+    <string name="supporting_mealtimes">• Supporting Mealtimes</string>
+    <string name="supporting_mealtimes_description">This section covers essential techniques for supporting mealtimes.</string>
+    <string name="start_button_text">Start</string>
+
+
 </resources>
 
