Creates the PIN code activity for 2-factor authentication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -585,5 +585,6 @@
     <string name="splash">splash</string>
     <string name="gopher_heart">gopher heart</string>
     <string name="verify_check">verify check</string>
+    <string name="login_pin">Login PIN</string>
 </resources>
 
