--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -573,6 +573,25 @@
     <string name="assigned_nurse_prefix">Assigned Nurse:</string>
     <string name="priority_prefix">Priority:</string>
     <string name="task_details_title">Task Details</string>
+
+    <string name="forgot_the_password">Forgot the password</string>
+    <string name="full_name">Full Name</string>
+    <string name="enter_email_address_for_reset">Enter the email address should we use to reset your password.</string>
+    <string name="email_address">Email address</string>
+    <string name="create_your_new_password">Create Your New Password</string>
+    <string name="create_new_password">Create New Password</string>
+    <string name="hidden_password">•••••••••</string>
+    <string name="password">Password</string>
+    <string name="text_continue">Continue</string>
+    <string name="log_in_success">Log in Success</string>
+    <string name="splash">splash</string>
+    <string name="gopher_heart">gopher heart</string>
+    <string name="verify_check">verify check</string>
+    <string name="otp_message">This code is valid for the next 15 minutes.</string>
+    <string name="resend">Resend</string>
+    <string name="please_check_your_email_for_the_code">Please check your email for the code.</string>
+    <string name="enter_pin_code">Enter PIN code</string>
+
     <!-- Strings for Module Titles and Descriptions -->
     <string name="module1_title">Module 1: Basic Caregiving Skills</string>
     <string name="module2_title">Module 2: Advanced Medical Procedures</string>
@@ -585,6 +604,46 @@
     <string name="welcome_onboard">Welcome Onboard</string>
     <string name="training">Training</string>
 
+
+    <string name="welcome_to_training">Welcome to the Training Module</string>
+    <string name="module_1">Module 1: Basic Caregiving Skills</string>
+    <string name="module_2">Module 2: Advanced Medical Procedures</string>
+    <string name="module_3">Module 3: Emotional Support and Communication</string>
+
+    <string name="welcome_message">Welcome to Guardian’s Online Learning Hub!</string>
+    <string name="welcome_description">Here, you can access and complete mandatory e-learning modules, as well as enroll in additional training courses available in the ‘Training Library’.\n\nWhether you’re completing training for the first time, refreshing your knowledge, or exploring further learning opportunities, we hope you enjoy your experience.\n\nUpon successfully completing a course, you will receive your certificate via email.\n\nIf you have any questions, please email us at training@guardian.org.au.\n\nThank you and enjoy your learning journey!</string>
+
+    <string name="inspiring_leadership">Inspiring Leadership through Emotional Intelligence</string>
+    <string name="inspiring_leadership_description">This section covers key aspects of emotional intelligence for inspiring leadership.</string>
+    <string name="emotional_intelligence_communication">• Emotional Intelligence and Communication</string>
+    <string name="emotional_intelligence_communication_description">This section covers the role of emotional intelligence in effective communication.</string>
+
+    <string name="medication_administration_title">Introduction to Medication Administration Technique</string>
+    <string name="medication_administration_description">This section covers the basics of administering medication safely and effectively.</string>
+
+    <string name="medication_safety_title">Medication Safety and Special Consideration</string>
+    <string name="medication_safety_description">This section covers safety protocols and special considerations in medication administration.</string>
+
+    <string name="homecare_induction">• Homecare Induction</string>
+    <string name="homecare_induction_description">This section covers essential homecare induction techniques.</string>
+    <string name="infection_control">• Infection Control</string>
+    <string name="infection_control_description">This section covers essential infection control techniques.</string>
+    <string name="supporting_mealtimes">• Supporting Mealtimes</string>
+    <string name="supporting_mealtimes_description">This section covers essential techniques for supporting mealtimes.</string>
+    <string name="start_button_text">Start</string>
+
+    <string name="medication_details">Medication Details</string>
+    <string name="medication_info">Text explaining what the medicine does and how it works.</string>
+    <string name="warning_adverse_reaction">Warning about adverse reactions</string>
+    <string name="prescription_warning">Only take this medicine if you have a prescription</string>
+    <string name="need_info">Need more info?</string>
+    <string name="ask_doctor">Remember to always ask a doctor if you are unsure</string>
+    <string name="need_more_info">Need more information about your medication?</string>
+    <string-array name="dropdown_items">
+        <item>Azithromycin</item>
+        <item>Levothyroxine</item>
+        <item>Lisinopril</item>
+    </string-array>
 
 </resources>
 
