--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -639,6 +639,7 @@
     <string name="need_info">Need more info?</string>
     <string name="ask_doctor">Remember to always ask a doctor if you are unsure</string>
     <string name="need_more_info">Need more information about your medication?</string>
+    <string name="monitor_patient">Monitor a Patient</string>
     <string-array name="dropdown_items">
         <item>Azithromycin</item>
         <item>Levothyroxine</item>
