--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -324,7 +324,7 @@
     <string name="enter_an_email_adress">Enter an email adress</string>
 
     <string name="caretaker_role_name">Caretaker</string>
-    <string name="company_admin_role_name">Company Admin</string>
+    <string name="company_admin_role_name">Admin</string>
     <string name="nurse_role_name">Nurse</string>
     <string name="login_role_selection_prompt">Login as:</string>
     <string name="register_role_selection_prompt">Register as:</string>
