--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,8 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="choose_diff_patient">&lt; Choose a Different Patient</string>
-
+    <string name="menu">Menu</string>
+    <string name="app_update_arrow">App Update Arrow</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="status_ok">(Status: <font fgcolor="#00FFFF">OK</font>)</string>
