--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,8 @@
     <string name="welcome_caretaker">Welcome, Caretaker</string>
     <string name="welcome_admin">Welcome, Administrator</string>
     <string name="welcome_nurse">Welcome, Nurse</string>
-
+    <string name="confirmation">Confirmation</string>
+    <string name="confirmation_message">Do you want to save this task?</string>
 
     <!-- Below are all strings previously hardcoded added here using the quick function -->
     <string name="confirm_incident_text">  ·   <b>Recorded Time</b>: 09:49 \n \n ·   Lying face down. \n \n             ·   No movement detected over 15 minutes</string>
